# spear

./: .gitignore  Makefile  README.md  go.mod  go.sum
.github/workflows/: test.yaml
cmd/demo/: main.go
cmd/dummy_task/: dummy_task.go  main.go
cmd/spearlet/: main.go
cmd/worker/: main.go  worker.go
demo/codelab/: codelab.py
docs/design/: spear-architecture.md
misc/codelab/: codelab.py
misc/opea/: lib.source  start.sh  test-qwen.py
pkg/common/: const.go  version.go
pkg/io/: voice.go
pkg/net/: client.go  http.go
pkg/openai/: chat.go  const.go  embeddings.go
pkg/rpc/: client.go  json.go  transform.go
pkg/utils/: utils.go
proto/chat/: common.fbs  request.fbs  response.fbs
proto/custom/: request.fbs  response.fbs
proto/io/: input-req.fbs  input-resp.fbs  record-req.fbs  record-resp.fbs  speak-req.fbs  speak-resp.fbs
proto/queue/: common.fbs  create-req.fbs  create-resp.fbs  delete-req.fbs  delete-resp.fbs  pub-req.fbs  pub-resp.fbs  sub-req.fbs  sub-resp.fbs
proto/speech/: asr-req.fbs  asr-resp.fbs  common.fbs
sdk/python/: MANIFEST.in  Makefile  project.toml  pyproject.toml  requirements.txt  setup.py
sdk/python/spear/: client.py  hostcalls.py
sdk/python/spear/hostcalls/: __init__.py  tools.py  transform.py
sdk/python/spear/transform/: chat.py  speech.py
sdk/python/spear/utils/: chat.py  io.py  tool.py  tools.py
sdk/python/tests/proto/: server.py  test_chat.py
spearlet/: spearlet.go  types.go
test/: functionality_test.go  server.crt  server.key  simple_req_test.go  test_guide.md  voice_test.go
worker/: types.go  worker.go
(+150 files in other folders)
