[build-system]
requires = ["setuptools>=61.0", "setuptools_scm[toml]>=6.2"]
build-backend = "setuptools.build_meta"

[project]
name = "spear"
dynamic = ["dependencies"]
description = "Spear Python SDK"
authors = [
    { name = "Wilson Wang", email = "wilson.wang@bytedance.com" }
]
license = { text = "MIT" }
requires-python = ">=3.6"
version = "v0.0.0"

[project.urls]
Homepage = "https://github.com/lfedgeai/spear"

[tool.setuptools]
packages.find = { include = ["spear", "spear.*"] }
include-package-data = true

[tool.setuptools.dynamic]
dependencies = { file = ["requirements.txt"] }
